# tdcest

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
docs/: credit_union_treatment.md  data_sources.md  equations.md  local_development.md  methodology.md  mmf_rrp_adjustment.md  output_schema.md  roadmap.md  wamest_interest_output_contract.md
examples/: README.md
scripts/: bootstrap_env.sh  build_all.py  build_bank_corp_tax_receipts_bridge_extended.py  build_bank_corp_tax_receipts_bridge_guardrail_audit.py  build_bea_row_receipts_anchor_extended.py  build_bea_row_receipts_ita_crosscheck.py  build_combined_statement_receipt_accounts.py  build_fdic_savings_institution_deposits.py  build_fed_coupon_proxy.py  build_irs_soi_bank_minor_industry_availability.py  build_irs_soi_bank_share_source_manifest.py  build_irs_soi_bank_tax_shares.py  build_irs_soi_bank_tax_shares_from_manifest.py  build_mts_fas_early_window_qa.py  build_mts_parser_total_reconciliation.py  build_mts_previous_issue_coverage.py  build_mts_previous_issues_manifest.py  build_mts_stitched_target_outlays.py  build_mts_stitched_target_receipts.py  build_mts_table4_target_history.py  build_mts_table4_target_receipts.py  build_mts_table5_target_history.py  build_mts_table5_target_outlays.py  build_mts_target_overlap_audit.py  build_ncua_credit_union_deposits.py  build_row_mrv_bea_overlay.py  build_state_visa_monthly_issuances.py  build_tdcsim_interest_certification_bridge.py  build_tdcsim_sector_interest_bridge.py  build_tier2_coupon_proxies.py  build_tier3_component_crosswalk.py  (+11 more)
site/: app.js  (+5 more)
(+255 files in other folders)
